--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html ng-app>
 <head>
-	<title>jsPlumb 1.4.0 - flowchart connectors demonstration - jQuery</title>
+	<title>WLPFLOW - NodeJS</title>
 	<link rel="stylesheet" href="css/demo-new.css">
 	<link rel="stylesheet" href="css/flowchartDemo.css">
 	<link rel="stylesheet" href="css/bootstrap-responsive.css" />
