--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="css/flowchartDemo.css">
 	<link rel="stylesheet" href="css/bootstrap-responsive.css" />
 	<link rel="stylesheet" href="css/jquery-ui-1.10.2.custom.css" />
-	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.5/angular.min.js"></script>
+	<script src="js/angular.min.js"></script>
 	<style type="text/css">
 	body {
 	    font-size: 12px;
