--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,7 @@
 	<link rel="stylesheet" href="css/demo-new.css">
 	<link rel="stylesheet" href="css/flowchartDemo.css">
 	<link rel="stylesheet" href="css/bootstrap-responsive.css" />
-	<link rel="stylesheet" href="css/jquery-ui-1.10.2.custom.css" />
-	<script src="js/angular.min.js"></script>
+	<link rel="stylesheet" href="css/jquery-ui-1.10.2.custom.css" />	
 	<style type="text/css">
 	body {
 	    font-size: 12px;
@@ -102,7 +101,7 @@
 	<script type="text/javascript" src="js/lib/jquery-ui-1.10.2.custom.min.js"></script>
 	<script type="text/javascript" src="js/lib/jquery.ui.touch-punch.min.js"></script>
 	
-
+	<script src="js/angular.min.js"></script>
 	<script src="js/1.4.0/jsPlumb-util-1.4.0-RC1.js"></script>
 	<script src="js/1.4.0/jsPlumb-dom-adapter-1.4.0-RC1.js"></script>
 	<script src="js/1.4.0/jsPlumb-1.4.0-RC1.js"></script>
@@ -118,11 +117,10 @@
 	<script src="js/1.4.0/jsPlumb-renderers-vml-1.4.0-RC1.js"></script>
 	<script src="js/1.4.0/jquery.jsPlumb-1.4.0-RC1.js"></script>
 
-	<script src="js/flowchartConnectorsDemo.js"></script>
 	<script src="js/demo-list.js"></script>
 	<script src="js/demo-helper-jquery.js"></script>
 	<script src="js/main.js"></script>
-	<script src="js/snodejs-diagrama.js"></script>
+	<script src="js/wlpflow.js"></script>
 	
 	<script>
 	$(function() {
